syntax = "proto3";

package echo;
option go_package = "github.com/salrashid123/grpc_dynamic_pb/example/src/echo";

service EchoServer {
  rpc SayHello (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string first_name = 1;
  string last_name = 2;
}

message EchoReply {
  string message = 1;
}
